--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,8 +7,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-icon name="images"></ion-icon>
+      <ion-label>Photo Gallery</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
