--- a/cordova/src/app/tab1/tab1.page.html
+++ b/cordova/src/app/tab1/tab1.page.html
@@ -8,10 +8,10 @@
 
 <ion-content>
     <ion-card class="welcome-card">
-      <img src="https://media.giphy.com/media/5VKbvrjxpVJCM/giphy.gif" alt="" />
+      <img src="/assets/shapes.svg" alt="" />
       <ion-card-header>
         <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Appflow Deploy FTW!</ion-card-title>
+        <ion-card-title>Welcome to Ionic</ion-card-title>
       </ion-card-header>
       <ion-card-content>
         <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
